--- a/index.html
+++ b/index.html
@@ -1,79 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style type="text/css">html {
-        font-family: Arial;
-        display: inline-block;
-        margin: 0px auto;
-        text-align: center;
-    }
-
-    h1 {
-        color: #070812;
-        padding: 2vh;
-    }
-
-    .button {
-        display: inline-block;
-        background-color: #b30000;
-        border: none;
-        border-radius: 4px;
-        color: white;
-        padding: 26px 40px;
-        text-decoration: none;
-        font-size: 30px;
-        margin: 2px;
-        cursor: pointer;
-    }
-
-    .button2 {
-        background-color: #364cf4;
-    }
-
-    .content {
-        padding: 50px;
-    }
-
-    .card-grid {
-        max-width: 800px;
-        margin: 0 auto;
-        display: grid;
-        grid-gap: 2rem;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
-    }
-
-    .card {
-        background-color: white;
-        box-shadow: 2px 2px 22px 2px rgba(240, 240, 240, .5);
-    }
-
-    .card-title {
-        font-size: 2.2rem;
-        font-weight: bold;
-        color: #034078
-    }</style>
-    <title>ESP32 WEB SERVER</title>
-    <meta content="width=device-width, initial-scale=2" name="viewport">
-    <link href="data:," rel="icon">
-    <link crossorigin="anonymous"
-href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-rel="stylesheet">
-    <link rel="stylesheet" type="text/css">
+    <style type="text/css">
+        html { font-family: Arial; text-align: center; }
+        h1 { color: #070812; padding: 2vh; }
+        .button {
+            display: inline-block;
+            background-color: #b30000;
+            border: none;
+            border-radius: 4px;
+            color: white;
+            padding: 26px 40px;
+            font-size: 30px;
+            cursor: pointer;
+        }
+        .button2 { background-color: #364cf4; }
+    </style>
+    <title>ESP32 Web MQTT</title>
+    <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 </head>
-<body><h2>ESP32 WEB SERVER</h2>
-<div class="content">
-    <div class="card-grid">
-        <div class="card"><p><i class="fas fa-lightbulb fa-2x"
-style="color:#c81919;"></i> <strong>GPIO2</strong></p>
-            <p>GPIO state: <strong> %s </strong></p>
-            <p><a href="/led2on">
-                <button class="button">ON</button>
-            </a> <a href="/led2off">
-                <button class="button button2">OFF</button>
-            </a></p>
-        </div>
+<body>
+    <h2>ESP32 Web MQTT</h2>
+    <div>
+        <p><i class="fas fa-lightbulb fa-2x" style="color:#c81919;"></i> <strong>LED Control</strong></p>
+        <p><button class="button" onclick="sendMQTT('ON')">ON</button>
+           <button class="button button2" onclick="sendMQTT('OFF')">OFF</button>
+        </p>
     </div>
-</div>
+
+    <script>
+        const broker = "wss://broker.emqx.io:8084/mqtt";  // Broker MQTT WebSocket
+        const topic = "prueba/led/carles"; // Topic MQTT
+        const client = mqtt.connect(broker);
+
+        client.on("connect", () => {
+            console.log("Conectado al broker MQTT");
+        });
+
+        function sendMQTT(message) {
+            client.publish(topic, message);
+            console.log("Mensaje enviado:", message);
+        }
+    </script>
 </body>
 </html>
